refactor: .formatted() instead of String.format()